--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 								</div>
 								<div class="desc">
 									<h4 class="text-uppercase" data-localize="service.android">安卓全栈</h4>
-									<p>
+									<p data-localize="service.android_detail">
 										APP开发、框架调优、固件定制。 <br>
-										浸渍Android系统开发十年，丰富的互联网以及设备厂商工作经验。<br>
+										浸渍Android系统开发十年，丰富的互联网以及设备厂商工作经验。
 									</p>
 								</div>
 							</div>
@@ -104,8 +104,9 @@
 								</div>
 								<div class="desc">
 									<h4 class="text-uppercase" data-localize="service.frontend">前端开发</h4>
-									<p>
-										痴迷于各类前端技术，满载的技能包。 <br> React, Angular, Weex, Vue, Node, CSS, HTML5 ...
+									<p data-localize="service.frontend_detail">
+										痴迷于各类前端技术，满载的技能包。 <br>
+										React, Angular, Weex, Vue, Node, CSS, HTML5 ...
 									</p>
 								</div>
 							</div>
@@ -118,7 +119,7 @@
 								</div>
 								<div class="desc">
 									<h4 class="text-uppercase" data-localize="service.wechat">微信周边</h4>
-									<p>
+									<p data-localize="service.wechat_detail">
 										微信公众号、小程序、小游戏。<br>
 										为合作伙伴构建完整的微信生态业务，提供微信运营解决方案。
 									</p>
@@ -130,7 +131,7 @@
 								</div>
 								<div class="desc">
 									<h4 class="text-uppercase" data-localize="service.backend">后端开发</h4>
-									<p>
+									<p data-localize="service.backend_detail">
 										业务梳理、数据分析、性能优化、部署运维。 <br>
 										专业团队筑造优秀品质，为合作伙伴保驾护航。
 									</p>
@@ -154,7 +155,7 @@
 								  		<img class="content-image img-fluid d-block mx-auto product-logo" src="img/products/xiaoniudushu-logo.png" alt="">
 										<div class="product-text">
 											<h4 data-localize="product.xiaoniudushu">小牛读书</h4>
-											<p>微信公众号：阅享青春·伴你成长</p>
+											<p data-localize="product.xiaoniudushu_detail">微信公众号：阅享青春·伴你成长</p>
 										</div>  
 										<div class="content-details fadeIn-bottom">
 											<img class="content-image img-fluid d-block mx-auto product-qrcode" src="img/products/xiaoniudushu-qrcode.png" alt="">
@@ -171,7 +172,7 @@
 								  	  	<img class="content-image img-fluid d-block mx-auto product-logo" src="img/products/brickout-logo.png" alt="">
 									  	<div class="product-text">
 											<h4 data-localize="product.brickout">消除砖块</h4>
-											<p>微信小游戏：休闲娱乐·组队拿奖</p>
+											<p data-localize="product.brickout_detail">微信小游戏：休闲娱乐·组队拿奖</p>
 									  	</div>									  
 									  	<div class="content-details fadeIn-bottom">
 											<img class="content-image img-fluid d-block mx-auto product-qrcode" src="img/products/brickout-qrcode.png" alt="">
@@ -188,7 +189,7 @@
 								  		<img class="content-image img-fluid d-block mx-auto product-logo" src="img/products/woju-logo.png" alt="">
 										<div class="product-text">
 											<h4 data-localize="product.doorguard">门禁管理系统</h4>
-											<p>桌面/移动应用：小区门禁·综合管理</p>
+											<p data-localize="product.doorguard_detail">桌面/移动应用：小区门禁·综合管理</p>
 										</div>  
 										<div class="content-details fadeIn-bottom">
 											<img class="content-image img-fluid d-block mx-auto product-qrcode" src="img/products/woju-qrcode.png" alt="">
@@ -205,7 +206,7 @@
 										<img class="content-image img-fluid d-block mx-auto product-logo" src="img/products/securitymaster-logo.png" alt="">
 										<div class="product-text">
 											<h4 data-localize="product.security">手机安全监控</h4>
-											<p>Android APP：状态上报·远程监控</p>
+											<p data-localize="product.security_detail">Android APP：状态上报·远程监控</p>
 										</div>
 										<div class="content-details fadeIn-bottom">
 											<!-- <img class="content-image img-fluid d-block mx-auto product-qrcode" src="img/products/securitymaster-qrcode.png" alt=""> -->
