--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               data-endelementdelay="0.1"
               style="z-index: 5; max-width: inherit; max-height: inherit; white-space: nowrap;color: #fff;font-size:60px;font-family: lato"
             >
-              欢迎来到
+              
             </div>
             <div
               class="tp-caption sft tp-resizeme"
@@ -386,7 +386,7 @@
               data-endelementdelay="0.1"
               style="z-index: 5; max-width: inherit; max-height: inherit; white-space: nowrap;color: #fff;font-size:70px;font-family: lato"
             >
-              JOIN
+              JOIN US
             </div>
             <div
               class="tp-caption grey_heavy_72 sfr tp-resizeme"
@@ -401,7 +401,7 @@
               data-endelementdelay="0.1"
               style="z-index: 5; max-width: inherit; max-height: inherit; white-space: nowrap;color: #fff;font-size:45px;font-family: lato"
             >
-              US
+             
             </div>
             <div
               class="hidden-xs tp-caption  sfb tp-resizeme"
