--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					>
 				</li>
 				<li class="list2">
-					<a href="products.html" class="hvr-underline-from-center"
+					<a href="solution.html" class="hvr-underline-from-center"
 					>产品</a
 					>
 				</li>
@@ -245,7 +245,7 @@ style="z-index: 5;font-size: 30px"
 >联系我们</a
 >
 </div>
-</li> -->
+</li> 
 <li
 data-transition="Curtain from Middle"
 data-slotamount="7"
@@ -256,10 +256,10 @@ class="bg-light"
 <img
 src="images/face.png"
 alt="face"
-data-bgposition="right center"
+data-bgposition="center"
 data-duration="11000"
 data-ease="Linear.easeNone"
-data-bgfit="cover"
+data-bgfit="scale-down"
 data-bgpositionend="left top"
 />
 <div
@@ -669,7 +669,7 @@ style="padding-bottom: 50px"
 											<p class="footer_text_color">
 												<a href="index.html">首页</a> &nbsp;
 												<a href="services.html">服务</a> &nbsp;
-												<a href="products.html">产品</a> &nbsp;
+												<a href="solution.html">产品</a> &nbsp;
 												<a href="about_us.html">关于我们</a> &nbsp;
 												<a href="careers.html">人才招聘</a>
 											</p>
