--- a/products.html
+++ b/products.html
@@ -91,7 +91,7 @@
                 >
               </li>
               <li class="list2">
-                <a href="products.html" class="hvr-underline-from-center"
+                <a href="solution.html" class="hvr-underline-from-center"
                   >产品</a
                 >
               </li>
@@ -110,11 +110,64 @@
         </nav>
       </div>
     </header>
+
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 col-sm-offset-3 text-center m-t-50">
+          <h2 class="text-center heading underline">行业解决方案</h2>
+          <p></p>
+        </div>
+      </div>
+      <div class="row mtb2">
+          <div class="col-md-5 col-md-offset-1">
+            <h3 class="centered" >人脸方案</h3>
+            <h5 class="centered mb" style='white-space: pre-line;'>
+            基于A83的人脸识别方案，
+            已获微信官方认证，
+            可用于微信人脸支付场景，
+            以及小区单元门禁、广告机等场景；
+            </h5>
+          </div>
+          <!--/col-md-6-->
+          <div class="col-md-5 of">
+            <img src="images/face.png" class="img-responsive aligncenter" alt="" data-effect="slide-right">
+          </div>
+          <!--/col-md-6 -->
+        </div>
+      <div class="row m-t-50">
+          <div class="col-sm-6">
+              <img
+              src="images/voice.png"
+              class="img-responsive"
+              alt="ofiice_image"
+              />
+              <br />
+            </div>
+        <div class="col-sm-6">
+          <div class="row">
+            <div class="col-xs-12 text-justify">
+                <h3 class="centered" >智能语音鼠标方案</h3>
+                <p style="white-space: pre-line;">基于BLE低功耗蓝牙 + 音频流采集 + 百度/科大讯飞语音识别的方案；
+                    给无线鼠标增加了语音输入文字功能，极大提升文字输入速度；
+                    实时翻译功能解决了外贸人士、客服人员对于实时翻译的需求；
+                    另外还可以通过语音进行搜索、打开特定软件等功能；
+                  </p>
+            </div>
+          </div>
+        </div>
+
+        
+      </div>
+    </div>
+ 
+
     <!--Login And Register Modal-->
     <!--Login And Register Modal-->
     <!--------------Body Section Start------------->
-    <section>
-      <div class="container">
+    <!-- 轮播图 滑动 -->
+    <!-- <section> -->
+      <!-- <div class="container">
         <div
           class="row wow fadeInDown"
           data-wow-duration="1s"
@@ -168,11 +221,11 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!------------Footer Caret Shape------------>
 
       <!------------Footer Caret Shape end------------>
-    </section>
+    <!-- </section> -->
 
     <div class="container m-t-50">
       <div
@@ -308,7 +361,7 @@
             <p class="footer_text_color">
               <a href="index.html">首页</a> &nbsp;
               <a href="services.html">服务</a> &nbsp;
-              <a href="products.html">产品</a> &nbsp;
+              <a href="solution.html">产品</a> &nbsp;
               <a href="about_us.html">关于我们</a> &nbsp;
               <a href="careers.html">人才招聘</a>
             </p>
