--- a/about_us.html
+++ b/about_us.html
@@ -86,7 +86,7 @@
                 >
               </li>
               <li class="list2">
-                <a href="products.html" class="hvr-underline-from-center"
+                <a href="solution.html" class="hvr-underline-from-center"
                   >产品</a
                 >
               </li>
@@ -192,7 +192,7 @@
             <p class="footer_text_color">
               <a href="index.html">首页</a> &nbsp;
               <a href="services.html">服务</a> &nbsp;
-              <a href="products.html">产品</a> &nbsp;
+              <a href="solution.html">产品</a> &nbsp;
               <a href="about_us.html">关于我们</a> &nbsp;
               <a href="careers.html">人才招聘</a>
             </p>
