--- a/services.html
+++ b/services.html
@@ -57,7 +57,7 @@
                 <ul class="nav navbar-nav">
                     <li class="list2"><a href="index.html" class="hvr-underline-from-center">首页</a></li>
                     <li class="list2"><a href="services.html" class="hvr-underline-from-center">服务</a></li>
-                    <li class="list2"><a href="products.html" class="hvr-underline-from-center">产品</a></li>
+                    <li class="list2"><a href="solution.html" class="hvr-underline-from-center">产品</a></li>
                     <li class="list2"><a href="careers.html" class="hvr-underline-from-center">人才招聘</a></li>
                     <li class="list2"><a href="about_us.html" class="hvr-underline-from-center">关于我们</a></li>
                    
@@ -169,7 +169,7 @@
           <p class="footer_text_color">
             <a href="index.html">首页</a> &nbsp;
             <a href="services.html">服务</a> &nbsp;
-            <a href="products.html">产品</a> &nbsp;
+            <a href="solution.html">产品</a> &nbsp;
             <a href="about_us.html">关于我们</a> &nbsp;
             <a href="careers.html">人才招聘</a>
           </p>
