Use cdn, lazy load, compress large image

--- a/about_us.html
+++ b/about_us.html
@@ -14,13 +14,14 @@
       href="images/favicon-32x32.png"
     />
     <!-----------------Global css------------------>
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
-    <link rel="stylesheet" href="vendors/animate/animate.min.css" />
-    <link rel="stylesheet" href="vendors/imagehover/css/imagehover.min.css" />
-    <link rel="stylesheet" href="vendors/iCheck/css/all.css" />
-    <link rel="stylesheet" href="vendors/circliful/css/jquery.circliful.css" />
-    <link rel="stylesheet" href="vendors/sweetalert2/css/sweetalert2.min.css" />
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdn.bootcss.com/animate.css/3.7.2/animate.min.css" />
+    <link rel="stylesheet" href="https://cdn.bootcss.com/imagehover.css/2.0.0/css/imagehover.min.css" />
+    <link rel="stylesheet" href="https://cdn.bootcss.com/iCheck/1.0.2/skins/minimal/_all.css" />
+    <link rel="stylesheet" href="https://cdn.bootcss.com/circliful/1.2.1/css/jquery.circliful.min.css" />
+    <link rel="stylesheet" href="https://cdn.bootcss.com/limonte-sweetalert2/8.11.8/sweetalert2.min.css" />
+
     <!-------------------custom css-------------------->
     <link rel="stylesheet" href="css/custom.css" />
   </head>
@@ -224,14 +225,15 @@
       </div>
     </section>
     <!------------------Copy rights End------------------>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="vendors/iCheck/js/icheck.js"></script>
-    <script src="vendors/isotope/js/isotope.pkgd.min.js"></script>
-    <script src="vendors/countup/js/countUp.min.js"></script>
-    <script src="vendors/circliful/js/jquery.circliful.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/iCheck/1.0.2/icheck.min.js"></script>
+    <script src="https://cdn.bootcss.com/countup.js/2.0.4/countUp.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery.isotope/3.0.1/isotope.pkgd.min.js"></script>
+    <script src="https://cdn.bootcss.com/limonte-sweetalert2/8.11.8/sweetalert2.min.js"></script>
+    <script src="https://cdn.bootcss.com/circliful/1.2.1/js/jquery.circliful.min.js"></script>
+
     <script src="vendors/jribbble/js/jribbble.min.js"></script>
-    <script src="vendors/sweetalert2/js/sweetalert2.min.js"></script>
     <!----------------Page Level JS-------------------->
     <script src="js/custom.js"></script>
   </body>
