--- a/careers_settings.html
+++ b/careers_settings.html
@@ -14,11 +14,11 @@
       href="images/favicon-32x32.png"
     />
     <!-----------------Global css------------------>
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdn.bootcss.com/animate.css/3.7.2/animate.min.css" />
+    <link rel="stylesheet" href="https://cdn.bootcss.com/iCheck/1.0.2/skins/minimal/_all.css" />
     <link rel="stylesheet" href="vendors/select2/css/select2.min.css" />
-    <link href="vendors/wow/css/animate.css" rel="stylesheet" />
-    <link rel="stylesheet" href="vendors/iCheck/css/all.css" />
     <!----------------Custom css------------------->
     <link rel="stylesheet" href="css/custom.css" />
   </head>
@@ -219,11 +219,12 @@
       </div>
     </section>
     <!------------------Copy rights End------------------>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/iCheck/1.0.2/icheck.min.js"></script>
+    <script src="https://cdn.bootcss.com/wow/1.1.2/wow.min.js"></script>
+
     <script src="vendors/select2/js/select2.min.js"></script>
-    <script src="vendors/wow/js/wow.min.js"></script>
-    <script src="vendors/iCheck/js/icheck.js"></script>
     <script src="vendors/jribbble/js/jribbble.min.js"></script>
     <!-------------Page Level Js------------------->
     <script src="js/custom.js"></script>
