--- a/products.html
+++ b/products.html
@@ -14,19 +14,14 @@
       href="images/favicon-32x32.png"
     />
     <!-------------Global css-------------->
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
-    <link
-      rel="stylesheet"
-      href="vendors/owlcarousel/css/owl.carousel.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="vendors/owlcarousel/css/owl.theme.green.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdn.bootcss.com/iCheck/1.0.2/skins/minimal/_all.css" />
+    <link rel="stylesheet" href="https://cdn.bootcss.com/OwlCarousel2/2.1.6/assets/owl.carousel.min.css" />
+    <link rel="stylesheet" href="https://cdn.bootcss.com/OwlCarousel2/2.1.6/assets/owl.theme.green.min.css" />
+    <link rel="stylesheet" href="https://cdn.bootcss.com/Swiper/3.3.1/css/swiper.min.css" />
+
     <link rel="stylesheet" href="vendors/wow/css/animate.css" />
-    <link rel="stylesheet" href="vendors/swiper/css/swiper.min.css" />
-    <link rel="stylesheet" href="vendors/iCheck/css/all.css" />
     <!--------------custom css------------->
     <link rel="stylesheet" href="css/custom.css" />
   </head>
@@ -393,12 +388,13 @@
       </div>
     </section>
     <!------------------Copy rights End------------------>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="vendors/owlcarousel/js/owl.carousel.min.js"></script>
-    <script src="vendors/wow/js/wow.min.js"></script>
-    <script src="vendors/swiper/js/swiper.jquery.min.js"></script>
-    <script src="vendors/iCheck/js/icheck.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/iCheck/1.0.2/icheck.min.js"></script>
+    <script src="https://cdn.bootcss.com/wow/1.1.2/wow.min.js"></script>
+    <script src="https://cdn.bootcss.com/OwlCarousel2/2.1.6/owl.carousel.min.js"></script>
+    <script src="https://cdn.bootcss.com/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
+
     <script src="vendors/jribbble/js/jribbble.min.js"></script>
     <!--------------custom JS------------------->
     <script src="js/custom.js"></script>
