--- a/solution.html
+++ b/solution.html
@@ -7,19 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>解决方案-空指针科技</title>
 
-  <!-- animated -->
-  <link rel="stylesheet" href="css/animate.min.css">
-  <!-- bootstrap -->
-  <link rel="stylesheet" href="css/bootstrap.css" />
-  <!-- fullpage依赖引入 -->
-  <link rel="stylesheet" href="css/jquery.fullPage.css">
+  <link rel="stylesheet" href="https://cdn.bootcss.com/animate.css/3.7.2/animate.min.css">
+  <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdn.bootcss.com/fullPage.js/2.9.4/jquery.fullpage.min.css">
 
-  <!-- jquery引入 -->
-  <script src="js/jquery.min.js"></script>
-  <!-- bootstarp -->
-  <script src="js/bootstrap.min.js"></script>
-  <!-- fullpage依赖引入 -->
-  <script src="js/jquery.fullPage.min.js"></script>
+  <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://cdn.bootcss.com/fullPage.js/2.9.4/jquery.fullpage.min.js"></script>
 
   <style>
     .section {
