--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ alt="face"
 data-bgposition="center"
 data-duration="11000"
 data-ease="Linear.easeNone"
-data-bgfit="scale-down"
+data-bgfit="cover"
 data-bgpositionend="left top"
 />
 <div
