--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <title>服务-空指针科技</title>
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+<!--     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.bootcss.com/iCheck/1.0.2/skins/minimal/_all.css" />
