add AI products

--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
 					<a href="index.html" class="hvr-underline-from-center">首页</a>
 				</li>
 				<li class="list2">
-					<a href="services.html" class="hvr-underline-from-center"
-					>服务</a
+					<a href="solution.html" class="hvr-underline-from-center"
+					>产品</a
 					>
 				</li>
 				<li class="list2">
-					<a href="solution.html" class="hvr-underline-from-center"
-					>产品</a
+					<a href="services.html" class="hvr-underline-from-center"
+					>服务</a
 					>
 				</li>
 				<li class="list2">
@@ -130,7 +130,7 @@ data-alias="news-hero72"
 		data-description=""
 		>
 		<img
-		src="images/new_slider1.jpg"
+		src="images/first.svg"
 		alt="systemimg"
 		data-kenburns="off"
 		data-bgposition="center center"
@@ -242,7 +242,7 @@ style="z-index: 5;font-size: 30px"
 >联系我们</a
 >
 </div>
-</li> 
+</li>
 <li
 data-transition="Curtain from Middle"
 data-slotamount="7"
@@ -251,7 +251,102 @@ data-masterspeed="600"
 class="bg-light"
 >
 <img
-src="images/face.png"
+src="images/video_temp.svg"
+alt="face"
+data-bgposition="center"
+data-duration="11000"
+data-ease="Linear.easeNone"
+data-bgfit="cover"
+data-bgpositionend="left top"
+/>
+<div
+class="tp-caption grey_heavy_72 sfb tp-resizeme"
+data-x="20"
+data-y="100"
+data-speed="700"
+data-start="700"
+data-easing="Power0.easeInOut"
+data-splitin="lines"
+data-splitout="none"
+data-elementdelay="0.1"
+data-endelementdelay="0.1"
+style="z-index: 5; max-width: inherit; max-height: inherit; white-space: nowrap;color: #fff;font-size:40px;font-family: lato"
+>
+基于AI+热成像非接触体温解决方案
+</div>
+<div
+class="tp-caption grey_heavy_72 sft tp-resizeme"
+data-x="20"
+data-y="200"
+data-speed="700"
+data-start="1000"
+data-easing="Power0.easeInOut"
+data-splitin="lines"
+data-splitout="none"
+data-elementdelay="0.1"
+data-endelementdelay="0.1"
+style="z-index: 5; max-width: inherit; max-height: inherit;
+white-space: nowrap;color: #fff;font-size:20px;font-family: lato"
+>通过测温人脸识别面板和热成像相机可实时检测来访者人体体温
+</div>
+<div
+class="tp-caption grey_heavy_72 sft tp-resizeme"
+data-x="20"
+data-y="250"
+data-speed="700"
+data-start="1200"
+data-easing="Power0.easeInOut"
+data-splitin="lines"
+data-splitout="none"
+data-elementdelay="0.1"
+data-endelementdelay="0.1"
+style="z-index: 5; max-width: inherit; max-height: inherit;
+white-space: nowrap;color: #fff;font-size:20px;font-family: lato"
+>
+并在超过人体正常体温时及时语音报警提醒并记录数据上传到云端平台	
+</div>
+<div
+class="tp-caption grey_heavy_72 sft tp-resizeme"
+data-x="20"
+data-y="300"
+data-speed="700"
+data-start="1400"
+data-easing="Power0.easeInOut"
+data-splitin="lines"
+data-splitout="none"
+data-elementdelay="0.1"
+data-endelementdelay="0.1"
+style="z-index: 5; max-width: inherit; max-height: inherit;
+white-space: nowrap;color: #fff;font-size:20px;font-family: lato"
+>
+同时还可以检测来访者是否佩戴口罩，包括身份识别
+</div>
+<div
+class="tp-caption grey_heavy_72 sft tp-resizeme"
+data-x="20"
+data-y="350"
+data-speed="700"
+data-start="1600"
+data-easing="Power0.easeInOut"
+data-splitin="lines"
+data-splitout="none"
+data-elementdelay="0.1"
+data-endelementdelay="0.1"
+style="z-index: 5; max-width: inherit; max-height: inherit;
+white-space: nowrap;color: #fff;font-size:30px;font-family: lato"
+>
+便捷，高效，安全
+</div>
+</li>
+<li
+data-transition="Curtain from Middle"
+data-slotamount="7"
+data-delay="5000"
+data-masterspeed="600"
+class="bg-light"
+>
+<img
+src="images/face.svg"
 alt="face"
 data-bgposition="center"
 data-duration="11000"
@@ -349,7 +444,7 @@ data-title="Intro Slide"
 data-bgfit="cover"
 >
 <img
-src="images/voice.png"
+src="images/voice_mouse.svg"
 alt="voice"
 data-bgposition="center center"
 data-duration="11000"
@@ -445,7 +540,7 @@ style="z-index: 5; max-width: inherit; max-height: inherit; white-space: nowrap;
 	<div class="row">
 		<div class="col-sm-6 col-sm-offset-3 text-center m-t-50">
 			<h2 class="text-center heading underline">空指针科技</h2>
-			<p>珠海市空指针科技是一家以软件开发服务为主的技术创新公司。</p>
+			<p>珠海市空指针科技是一家致力于软件开发、软硬件结合方案提供的技术型创新公司。</p>
 		</div>
 	</div>
 	<div class="row m-t-50">
@@ -461,13 +556,13 @@ style="z-index: 5; max-width: inherit; max-height: inherit; white-space: nowrap;
 		<div class="col-sm-7">
 			<div class="row">
 				<div class="col-xs-12 text-justify">
-					<p>珠海市空指针科技是一家以软件开发服务为主的技术创新公司。</p>
+					<p>珠海市空指针科技是一家致力于软件开发、软硬件结合方案提供的技术型创新公司。</p>
 					<p>自2017年3月成立以来，一直为客户提供优质产品。</p>
 					<p>涉及领域：</p>
 					<ul>
+						<li>AI+物联网产品解决方案</li>
 						<li>应用开发和系统定制</li>
 						<li>小程序和小游戏开发</li>
-						<li>物联网产品解决方案</li>
 					</ul>
 				</div>
 			</div>
@@ -475,7 +570,7 @@ style="z-index: 5; max-width: inherit; max-height: inherit; white-space: nowrap;
 	</div>
 </div>
 <!-- 我们的服务 -->
-<div
+<!-- <div
 class="subscribe_section parallax m-t-70 text-white"
 style="padding-bottom: 50px"
 >
@@ -573,7 +668,7 @@ style="padding-bottom: 50px"
 		</div>
 	</div>
 </div>
-</div>
+</div> -->
 <div class="container">
 	<div class="row">
 		<div class="col-sm-6 col-sm-offset-3">
